Remove unnecessary --enable-preview flag