@@ -64,12 +64,12 @@ processResources {
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
-    options.compilerArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+    options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
     options.encoding = "UTF-8"
 }
 
 tasks.withType(JavaExec) {
-    jvmArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+    jvmArgs += ["--add-modules", "jdk.incubator.vector"]
 }
 
 java {
